# kaikki-kerralla

./: Cargo.toml  LICENSE  README.md
data/: .gitignore
src/: dictionary.rs  main.rs  model.rs  theme.rs
