[package]
name = "kaikki-kerralla"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.30.0"
eyre = "0.6.12"
postcard = { version = "1.1.1", features = ["use-std"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
trie-rs = { version = "0.4.2", features = ["serde"] }
